examples/typeError/typeErrorInCopatternDest4.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : NatList
.jeje (.tail f)  = 1
